# orange-openvibspec

./: .coveragerc  README.pypi  pyproject.toml  setup.cfg  setup.py  tox.ini
orangecontrib/openvibspecl/: nntransfer.py
orangecontrib/openvibspecl/tests/: test_load_models.py  test_nntransfer.py
orangecontrib/openvibspecl/widgets/: __init__.py  ownntranfer.py
