[metadata]
name = Orange-openvibspec
author = Bioinformatics Laboratory, FRI UL
author_email = marko.toplak@fri.uni-lj.si
maintainer = Marko Toplak
url = https://github.com/markotoplak/orange-openvibspec/
project_urls =
    Source Code = https://github.com/markotoplak/orange-openvibspec/
documentation_name = Orange OpenVibSpec
description = Orange add-on for transfer learning on spectroscopy data
long_description = file: README.pypi
long_description_content_type= text/markdown
keywords = 'orange3 add-on'
license = GPL3+

[options]
namespace_packages = orangecontrib
test_suite = orangecontrib.openvibspecl.tests.suite
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:

[options.entry_points]
orange3.addon =
	openvibspec=orangecontrib.openvibspecl
orange.widgets =
    OpenVibSpec=orangecontrib.openvibspecl.widgets
orange.canvas.help =
    html-index = orangecontrib.openvibspecl.widgets:WIDGET_HELP_PATH


[flake8]
max-line-length = 99
max-complexity = 20
# to ensure Black compatibility https://github.com/psf/black/issues/429
ignore =
    # Ignore this since we use PyQt5 basically everywhere.
    N802,
    # https://github.com/psf/black#line-breaks--binary-operators
    W503,
    # https://github.com/psf/black/issues/1289
    E231,
    E203,
    E266,
    E501,
    F403,
    F401,
    W291


ignore-names =
    settingsHandler

[isort]
line_length = 99
length_sort = True
multi_line_output=3
force_grid_wrap=0
use_parentheses=True
include_trailing_comma = True
known_third_party=numpy,scipy,pandas,requests
known_anyqt=AnyQt
known_orange=Orange
known_first_party = orangecontrib.openvibspecl
sections=FUTURE,STDLIB,THIRDPARTY,ANYQT,ORANGE,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
not_skip = __init__.py
